# commit-connect

./: .gitignore  README.md  app.py  auth.py  display_issues.py  gemini.py  pyproject.toml  requirements.txt  test_auth.py  test_filters.py  test_user_profile.py
presentations/: mentorPresentation.tex
utils/: github_api.py
