[project]
name = "commit-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.16",
    "google-generativeai>=0.8.4",
    "litellm>=1.63.7",
    "matplotlib>=3.10.1",
    "requests>=2.32.3",
    "streamlit>=1.44.1",
]
